# lan80xx-tools

./: LICENSE  README.md  meson.build  meson.options
examples/: nbxv3-host-bringup.seq
scripts/: events2seq.py
src/: lan8023_probe.c  lan80xx_bringup.c
